--- a/css/submedia_style.css
+++ b/css/submedia_style.css
@@ -1324,6 +1324,7 @@
     #title{
         height: auto;
         padding: 140px 20px 0 20px;
+        margin-top: 100px;
     }
     #title .title h2{
         font-size: 3.84615em;
@@ -1861,7 +1862,7 @@
     }
     .network dl{
         width: 40%;
-        height: 140px;
+        height: 150px;
         margin-top: 20px;
     }
     .network dl dt{
